mongodb db changed to atlas

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
 ACCESS_TOKEN_SECRET = "basantbhatt#987"
+MONGODB_URL ="mongodb+srv://bhattbasant778_db_user:NrL8V0TDn2ygi8nx@note.mkiczkd.mongodb.net"
